--- a/store/blocks/product/description.jsonc
+++ b/store/blocks/product/description.jsonc
@@ -56,7 +56,7 @@
   "flex-layout.col#product-description": {
     "children": [
       "rich-text#anchor-complete-description",
-      "product-description"
+      "product-description#no-collapse"
     ],
     "props": {
       "blockClass": "product-description",
@@ -67,6 +67,13 @@
     "props": {
       "htmlId": "completeDescription",
       "blockClass": "anchorCompleteDescription"
+    }
+  },
+  "product-description#no-collapse": {
+    "props": {
+      "title": "Descrizione",
+      "blockClass": "pdp",
+      "collapseContent": false
     }
   },
   "product-description": {
