--- a/package.json
+++ b/package.json
@@ -44,9 +44,8 @@
     "husky": "^4.2.3",
     "imagemin-lint-staged": "^0.4.0",
     "lint-staged": "^10.1.1",
-    "node-sass": "^5.0.0",
     "prettier": "^2.2.1",
-    "sass": "^1.54.8",
+    "sass": "^1.58.3",
     "stylelint": "^13.12.0",
     "stylelint-config-prettier": "^8.0.2",
     "stylelint-config-standard": "^21.0.0",
@@ -55,5 +54,8 @@
     "stylelint-scss": "^3.19.0",
     "typescript": "^3.8.3"
   },
-  "version": "0.0.0-beta.0"
+  "version": "0.0.0-beta.0",
+  "dependencies": {
+    "node-sass": "^8.0.0"
+  }
 }
